--- a/eco-notificaciones/package.json
+++ b/eco-notificaciones/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.0",
+    "lucide-react": "^0.525.0",
     "next": "^15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
